--- a/views/home.hbs
+++ b/views/home.hbs
@@ -58,15 +58,11 @@
     <i class="fas fa-times" id="form-close"></i>
 
     <form action="">
-        <h3>login</h3>
+        <h3>تسجيل الدخول</h3>
         <input type="email" class="box" placeholder="ادخل الايميل">
         <input type="password" class="box" placeholder="ادخل كلمة المرور">
         <input type="submit" value="تسجيل الدخول الآن" class="btn">
-        <input type="checkbox" >
-        <label for="remember">جمعية خيرية</label>
         <br>
-        <input type="checkbox" id="remember">
-        <label for="remember">مطعم</label>
         <p>نسيت كلمة المرور؟ <a href="#">أضغط هنا</a></p>
         <p>ليس لديك حساب؟ <a href="#">تسجيل دخول الان</a></p>
     </form>
