--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -46,11 +46,13 @@
 <div class="login-form-container">
    <div class="dropdown-content">
        <form action="" class="changePassword" method="post"></form>
+
+        <div class="message"><?php if(isset($message)) { echo $message; } ?></div>
+
             <a href="#"><h4>تغيير كلمة المرور</h4></a>
                 <h3>اعد ضبط كلمه السر</h3>
-                <input type="password" class="box" placeholder="أدخل كلمة المرور الحالية الخاصة بك" name="existingPassword">
-                <input type="password" class="box" placeholder="كلمة المرور جديدة"name="NewPassword">
-                <input type="password" class="box" placeholder="أعد كتابة كلمة المرور الجديدة" name="Re-TypeNewPassword">
+                <input type="password" class="box" placeholder="كلمة المرور جديدة" name="newPassword">
+                <input type="password" class="box" placeholder="أعد كتابة كلمة المرور الجديدة" name="confirmPassword">
                 <input type="submit" value="تأكيد" class="btn">
             <a href="#"><h4>تسجيل خروج</h4></a>
         </form>
