--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -51,12 +51,12 @@
         <!-- <i class="fas fa-times" id="form-close"></i> -->
     
         <form action="/auth/register" method="POST">
-            <h3>SIGN UP</h3>
-            <input name="name" type="text" class="box" placeholder="enter your name">
-            <input name="email" type="email" class="box" placeholder="enter your email">
-            <input name="phone" type="text" class="box" placeholder="enter your phone">
-            <input name="password" type="password" class="box" placeholder="enter your password">
-            <input name="confirm" type="password" class="box" placeholder="enter your password again">
+            <h3>مستخدم جديد</h3>
+            <input name="name" type="text" class="box" placeholder="ادخل اسمك">
+            <input name="email" type="email" class="box" placeholder="ادخل ايميلك">
+            <input name="phone" type="text" class="box" placeholder="ادخل رقم هاتفك">
+            <input name="password" type="password" class="box" placeholder="ادخل كلمة السر">
+            <input name="confirm" type="password" class="box" placeholder="ادخل كلمة السر مجددا">
             <div class="input-group mb-3">
                 <select name="type" class="form-select" id="inputGroupSelect02">
                   <option value="1">Resturant</option>
@@ -64,10 +64,10 @@
                   <option value="3">Customer</option>
                 </select>
               </div>
-            <input type="submit" value="sign up" class="btn">
+            <input type="submit" value="انشاء حساب" class="btn">
         
-            <p>forget password? <a href="#">click here</a></p>
-            <p>don't have and account? <a href="#">register now</a></p>
+          
+            <p>هل لديك حساب مسبقا؟ <a href="#">قم بتسحيل الدخول</a></p>
         </form>
     
     </div>
