--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -59,9 +59,8 @@
             <input name="confirm" type="password" class="box" placeholder="ادخل كلمة السر مجددا">
             <div class="input-group mb-3">
                 <select name="type" class="form-select" id="inputGroupSelect02">
-                  <option value="1">Resturant</option>
-                  <option value="2">Charity</option>
-                  <option value="3">Customer</option>
+                  <option value="1">مستخدم</option>
+                  <option value="2">مطعم</option>
                 </select>
               </div>
             <input type="submit" value="انشاء حساب" class="btn">
