--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -17,7 +17,7 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"><span>لـ</span>لقمة عيش</a>
+    <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
 
     <nav class="navbar">
         <a href="#home">الرئيسية</a>
