--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لقمة عيش</title>
-
+    <title>لقمة خير</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <!-- custom css file link  -->
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <div id="menu-bar" class="fas fa-bars"></div>
-    
-        <a href="#" class="logo"><span>لـ</span>قمة خير</a>
-    
-        <nav class="navbar">
-            <a href="#home">الرئيسية</a>
-            <a href="#packages">المطاعم</a>
-            <a href="#services">العروضات</a>
-            <a href="#book">حجز</a>
-            <a href="#contact">التواصل معنا</a>
-        </nav>
-    
-        <div class="icons">
-            <i class="fas fa-search" id="search-btn"></i>
-            <i class="fas fa-user" id="login-btn"></i>
-        </div>
-    
-        <form action="" class="search-bar-container">
-            <input type="search" id="search-bar" placeholder="search here...">
-            <label for="search-bar" class="fas fa-search"></label>
-        </form>
-    <div class='div1'>
-    
+    <div id="menu-bar" class="fas fa-bars"></div>
+
+    <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
+
+    <nav class="navbar">
+        <a href="#home">الرئيسية</a>
+        <a href="#packages">المطاعم</a>
+        <a href="#services">العروضات</a>
+        <a href="#book">حجز</a>
+        <a href="#contact">التواصل معنا</a>
+    </nav>
+     <div class="dropdown">
+     <div class="icons">
+        <i class="fa fa-gear" style="font-size:24px"id="aa"></i>
+        <i class="fas fa-search" id="search-btn"></i>
+        <i class="fas fa-user" id="login-btn"></i>
+
+     </div> 
     </div>
-    </header>
-    {{#if message}}
+    <form action="" class="search-bar-container">
+        <input type="search" id="search-bar" placeholder="search here...">
+        <label for="search-bar" class="fas fa-search"></label>
+    </form>
+
+<div class='div1'>
+
+</div>
+</header>   {{#if message}}
       <h4 class="alert alert-danger mt-4 fixed">{{message}}</h4>
     {{/if}}
     <div class="login-form-container">
