--- a/views/logIn.hbs
+++ b/views/logIn.hbs
@@ -47,7 +47,7 @@
 
     <i class="fas fa-times" id="form-close"></i>
 
-    <form action="">
+    <form action="/auth2/signin" method = "POST">
         <h3>تسجيل الدخول</h3>
         <input type="email" class="box" placeholder="ادخل الايميل">
         <input type="password" class="box" placeholder="ادخل كلمة المرور">
