--- a/views/logIn.hbs
+++ b/views/logIn.hbs
@@ -53,8 +53,8 @@
         <input type="password" class="box" placeholder="ادخل كلمة المرور">
         <input type="submit" value="تسجيل الدخول الآن" class="btn">
         <br>
-        <p>نسيت كلمة المرور؟ <a href="#">أضغط هنا</a></p>
-        <p>ليس لديك حساب؟ <a href="#">تسجيل دخول الان</a></p>
+        <p>نسيت كلمة المرور؟ <a href="http://localhost:3001/newPassword">أضغط هنا</a></p>
+        <p>ليس لديك حساب؟ <a href="http://localhost:3001/register">تسجيل دخول الان</a></p>
     </form>
 
 </div>
