--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -65,7 +65,7 @@
             <input type="submit" value="انشاء حساب" class="btn">
         
           
-            <p>هل لديك حساب مسبقا؟ <a href="#">قم بتسحيل الدخول</a></p>
+            <p>هل لديك حساب مسبقا؟ <a href="http://localhost:3001/Login">قم بتسحيل الدخول</a></p>
         </form>
     
     </div>
