--- a/views/setNewPass.hbs
+++ b/views/setNewPass.hbs
@@ -20,25 +20,13 @@
     <header>
         <div id="menu-bar" class="fas fa-bars"></div>
     
-        <a href="#" class="logo"><span>لـ</span>قمة خير</a>
-    
-        <nav class="navbar">
-            <a href="#home">الرئيسية</a>
-            <a href="#packages">المطاعم</a>
-            <a href="#services">العروضات</a>
-            <a href="#book">حجز</a>
-            <a href="#contact">التواصل معنا</a>
-        </nav>
-    
+    <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
+
         <div class="icons">
             <i class="fas fa-search" id="search-btn"></i>
             <i class="fas fa-user" id="login-btn"></i>
         </div>
     
-        <form action="" class="search-bar-container">
-            <input type="search" id="search-bar" placeholder="search here...">
-            <label for="search-bar" class="fas fa-search"></label>
-        </form>
     <div class='div1'>
     
     </div>
