--- a/views/logIn.hbs
+++ b/views/logIn.hbs
@@ -18,14 +18,6 @@
     <div id="menu-bar" class="fas fa-bars"></div>
 
     <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
-
-    <nav class="navbar">
-        <a href="#home">الرئيسية</a>
-        <a href="#packages">المطاعم</a>
-        <a href="#services">العروضات</a>
-        <a href="#book">حجز</a>
-        <a href="#contact">التواصل معنا</a>
-    </nav>
      <div class="dropdown">
      <div class="icons">
         <i class="fa fa-gear" style="font-size:24px"id="aa"></i>
@@ -34,10 +26,6 @@
 
      </div> 
     </div>
-    <form action="" class="search-bar-container">
-        <input type="search" id="search-bar" placeholder="search here...">
-        <label for="search-bar" class="fas fa-search"></label>
-    </form>
 
 <div class='div1'>
 
@@ -53,8 +41,8 @@
         <input type="password" class="box" placeholder="ادخل كلمة المرور">
         <input type="submit" value="تسجيل الدخول الآن" class="btn">
         <br>
-        <p>نسيت كلمة المرور؟ <a href="http://localhost:3001/newPassword">أضغط هنا</a></p>
-        <p>ليس لديك حساب؟ <a href="http://localhost:3001/register">تسجيل دخول الان</a></p>
+        <p>نسيت كلمة المرور؟ <a href="/newPassword">أضغط هنا</a></p>
+        <p>ليس لديك حساب؟ <a href="/register">تسجيل دخول الان</a></p>
     </form>
 
 </div>
