--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -20,7 +20,7 @@
     <header>
         <div id="menu-bar" class="fas fa-bars"></div>
     
-    <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
+    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
     
         <div class="icons">
             <i class="fas fa-search" id="search-btn"></i>
