--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
+    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
      <div class="dropdown">
      <div class="icons">
         <i class="fa fa-gear" style="font-size:24px"id="aa"></i>
