--- a/views/logIn.hbs
+++ b/views/logIn.hbs
@@ -17,7 +17,7 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
+    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
      <div class="dropdown">
      <div class="icons">
 
