--- a/views/mainPage.hbs
+++ b/views/mainPage.hbs
@@ -17,7 +17,7 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"><span>لـ</span>قمة عيش</a>
+    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
         <nav class="navbar">
         <a href="#packages">المطاعم</a>
         <a href="#services">العروضات</a>
