--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -39,6 +39,7 @@
     
         <form action="/auth/register" method="POST">
             <h3> تغيير كلمة المرور</h3>
+            <input name="curentpassword" type="password" class="box" placeholder=" ادخل كلمة المرور الحالية">
             <input name="password" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة">
             <input name="confirm" type="password" class="box" placeholder="تأكيد كلمة المرور">
             <input type="submit" value="تأكيد" class="btn">
