--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -37,7 +37,7 @@
 
         <!-- <i class="fas fa-times" id="form-close"></i> -->
     
-        <form action="/auth/register" method="POST">
+        <form  action="/changePassword" method="POST">
             <h3> تغيير كلمة المرور</h3>
             <input name="curentpassword" type="password" class="box" placeholder=" ادخل كلمة المرور الحالية">
             <input name="password" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة">
