--- a/views/profilePage.hbs
+++ b/views/profilePage.hbs
@@ -35,7 +35,7 @@
                 <div class="profile-img">
                     <img src="imags/download.png" alt=""/>
                     <div class="file btn btn-lg btn-primary">
-                        Change Photo
+                        تعديل الصورة
                         <input type="file" name="file"/>
                     </div>
             </div>
@@ -43,13 +43,13 @@
         <div class="col-md-5 border-right">
             <div class="p-3 py-5">
                 <div class="row mt-5">
-                    <div class="col-md-12"><label class="labels">Name  :  </label><input type="text"placeholder="  Enter name" value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">Email  :  </label><input type="text"  placeholder="  Enter email " value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">Number  :  </label><input type="text"  placeholder="  Enter phone " value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">Website  :  </label><input type="text" placeholder="  Enter website" value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">Account type  :  </label><input type="text" placeholder="  Enter Account type" value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">الاسم  :  </label><input type="text"placeholder="  أدخل اسمك" value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">الايميل  :  </label><input type="text"  placeholder="  أدخل ايميلك" value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><input type="text"  placeholder="    أدخل رقم هاتفك " value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><input type="text" placeholder="  أدخل الموقع الالكتروني" value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">الموقع  :  </label><input type="text" placeholder="  أدخل موقعك" value=""><br><br></div>
                 </div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Edit Profile</button></div>
+                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">تعديل الملف الشخصي</button></div>
             </div>
         </div>
     </div>
