some edit about design
Co-Authored-By: abrarhannoon <92648528+abrarhannoon@users.noreply.github.com>
Co-Authored-By: Karam R. Hazza <77400199+william94411@users.noreply.github.com>

--- a/public/style.css
+++ b/public/style.css
@@ -16,11 +16,44 @@
   margin-right: auto;
   box-sizing: border-box;
 }
+.container{
+  display: flex;
+}
+/* .div2{
+  background:;
+} */
 .btnn{
   margin-left: 20vw;
   width: 22vw;
   height: 8vh;
   font-size:30px !important;
+}
+h5{
+  font-size:50px;
+  color:#333;
+  font-family: 'Vazirmatn', sans-serif;
+}
+h6{
+  font-size:50px;
+  color:#ffa500;
+  font-family: 'Vazirmatn', sans-serif;
+}
+h7{
+  font-size:20px;
+  color:rgb(91, 86, 75);
+  font-family: 'Vazirmatn', sans-serif;
+}
+.div1 a{
+  font-size:20px;
+  color:#ffa500;
+  font-family: 'Vazirmatn', sans-serif;
+
+}
+.div1 p{
+  text-align: right;
+  font-size:20px;
+  color:#333;
+  font-family: 'Vazirmatn', sans-serif;
 }
 .btnnn{
   position: absolute;
@@ -55,19 +88,7 @@ html{
 section{
   padding:2rem 9%;
 }
-.books{
 
-  position: relative;
-  position:fixed;
-  top:5vh;
-  padding: 30px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(255, 250, 238);
-  display: none;
-  overflow: scroll;
-}
 .sec1{
   width: 80vw;
   margin-top: 50px;
@@ -76,29 +97,18 @@ section{
   margin-left: auto;
   
 }
-.bookSec input[type='text'],.bookSec input[type='number']{
-  width:35vw;
-  padding: 10px;
-  border:1px solid black;
-  margin-top: 20px;
-  border:.1rem solid rgba(0,0,0,.1);
-  font-size: 1.7rem;
-  color:#333;
-  margin-right: 5vw;
-}
-.bookSec input[type='number']{
-  margin-right: 10vw;
-}
-.btns{
- margin-bottom: 0; 
-}
-
-.btns button{
-  width:20vw;
-  padding:15px;
-  font-size: 24px;
+.home{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  position: relative;
+  z-index: 0;
+  background-color: #ffc153;
 }
 .heading{
+  margin-top: 7vh;
   text-align: center;
   padding:2.5rem 0
 }
@@ -129,15 +139,15 @@ section{
   background:rgba(255, 165, 0,.2);
   color:var(--orange);
 }
-
+p{
+  text-align: center;
+}
 header{
   position: fixed;
   top:0; left: 0; right:0;
   background:#333;
   z-index: 1000;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   padding:2rem 9%;
 }
 
@@ -165,9 +175,7 @@ header .icons i:hover{
 .row{
   margin-top: 160px;
 }
-body {
-  background: linear-gradient( #fff 10%, #ffa500 , #ffa500 ,#fff 100%)
-}
+
 .profile-img{
   text-align: center;
 }
@@ -257,7 +265,6 @@ header .search-bar-container label:hover{
 }
 
 .login-form-container{
-  position: fixed;
   top:-120%; left: 0;
   z-index: 10000;
   min-height: 100vh;
@@ -288,7 +295,7 @@ header .search-bar-container label:hover{
   padding:1rem 0;
 }
 
-.login-form-container form .box{
+.login-form-container form .box,#inputGroupSelect02{
   width:100%;
   padding:1rem;
   font-size: 1.7rem;
@@ -297,7 +304,15 @@ header .search-bar-container label:hover{
   border:.1rem solid rgba(0,0,0,.3);
   text-transform: none;
 }
+header .navbar a{
+  color:#fff;
+  font-size: 2rem;
+  margin:0 .8rem;
+}
 
+header .navbar a:hover{
+  color:var(--orange);
+}
 .login-form-container form .box:focus{
   border-color: var(--orange);;
 }
