--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<script defer src="loqma.js"></script>
 </head>
 <body>
 <header>
@@ -20,33 +24,30 @@
     <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
      <div class="dropdown">
      <div class="icons">
-        <i class="fa fa-gear" style="font-size:24px"id="aa"></i>
-        <i class="fas fa-search" id="search-btn"></i>
-        <i class="fas fa-user" id="login-btn"></i>
-
+    <i class="fas fa-search" id="search-btn"></i>
+    <i class="fas fa-user" id="login-btn"></i>
      </div> 
     </div>
 
-<div class='div1'>
-
-</div>
 </header>
 
-<section class="container1">
-    <div id="a"class="row align-items-start">
-        <div class="col"> 
-        </div>
-        <div class="col">  
-        </div>
-        <div class="col">
-        </div>
-    </div>
-    <div id="b" class="row align-items-end">
-        <div class="col">
-        </div>
-        <div class="col">
-        </div>
-    </div>
+<section class="home" id="home"style="background-color:#fff;">
+     <div class="container"style="background-color:#fff; width:100vw;">
+         <div class="div1">
+            <h5>مرحبا بكم في موقعنا</h5>
+            <h6>لقمة عيش</h6>
+            <p>موقع لقمة عيش، هو موقع يتيح التواصل بين الجمعيات والمطاعم <br>من اجل ادارة فائض الطعام اليومي في المطاعم ،حيث يتم الترتيب بين <br>الجمعيات والمطاعم لتنسيق الوقت لاخذ هذا الطعام وتوزيعه على من <br>هم بحاجة اليه من قبل الجمعيات</p>
+            <br><br><br>
+            <h7>الرجاء تسجيل الدخول للمتابعة</h7>
+            <a href="/Login">تسحيل الدخول الآن</a>
+         </div>
+         <div class="div2">
+              <img src="luqma.png" class="d-block w-100" alt="...">
+         </div>
+         
+         
+     </div>
+
 </section>
 
 </body>
