--- a/views/logIn.hbs
+++ b/views/logIn.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,6 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="style.css">
-<script defer src="loqma.js"></script>
 </head>
 <body>
 <header>
@@ -20,16 +19,11 @@
     <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
      <div class="dropdown">
      <div class="icons">
-
-        <i class="fas fa-search" id="search-btn"></i>
-        <i class="fas fa-user" id="login-btn"></i>
-
+    <i class="fas fa-search" id="search-btn"></i>
+    <i class="fas fa-user" id="login-btn"></i>
      </div> 
     </div>
 
-<div class='div1'>
-
-</div>
 </header>
 <div class="login-form-container">
 
@@ -41,8 +35,10 @@
         <input type="password" class="box" placeholder="ادخل كلمة المرور">
         <input type="submit" value="تسجيل الدخول الآن" class="btn">
         <br>
-        <p>نسيت كلمة المرور؟ <a href="/newPassword">أضغط هنا</a></p>
-        <p>ليس لديك حساب؟ <a href="/register">تسجيل دخول الان</a></p>
+
+        <p style="text-align:center">نسيت كلمة المرور؟ <a href="/newPassword">أضغط هنا</a></p>
+        <p style="text-align:center">ليس لديك حساب؟ <a href="/register">انشاء حساب جديد</a></p>
+
     </form>
 
 </div>
