--- a/views/mainPage.hbs
+++ b/views/mainPage.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,6 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="style.css">
-<script defer src="loqma.js"></script>
 </head>
 <body>
 <header>
@@ -19,28 +18,19 @@
 
     <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
         <nav class="navbar">
+        <a href="#home">الرئيسية</a>
         <a href="#packages">المطاعم</a>
         <a href="#services">العروضات</a>
         <a href="#book">حجز</a>
         <a href="#contact">التواصل معنا</a>
     </nav>
-
      <div class="dropdown">
      <div class="icons">
-        <i class="fa fa-gear" style="font-size:24px"id="aa"></i>
-        <i class="fas fa-search" id="search-btn"></i>
-        <i class="fas fa-user" id="login-btn"></i>
-
+    <i class="fas fa-search" id="search-btn"></i>
+    <i class="fas fa-user" id="login-btn"></i>
      </div> 
     </div>
-    <form action="" class="search-bar-container">
-        <input type="search" id="search-bar" placeholder="search here...">
-        <label for="search-bar" class="fas fa-search"></label>
-    </form>
 
-<div class='div1'>
-
-</div>
 </header>
 
 
