--- a/views/profilePage.hbs
+++ b/views/profilePage.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar"dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,32 +10,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link rel="stylesheet" href="loqma.css">
-<script defer src="loqma.js"></script>
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="  background-color: #ffc153;">
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
+
     <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
      <div class="dropdown">
      <div class="icons">
-        <i class="fa fa-gear" style="font-size:24px"id="aa"></i>
-        <i class="fas fa-search" id="search-btn"></i>
-        <i class="fas fa-user" id="login-btn"></i>
+    <i class="fas fa-search" id="search-btn"></i>
+    <i class="fas fa-user" id="login-btn"></i>
      </div> 
     </div>
 
-<div class='div1'>
-
-</div>
 </header>
-<div class="container rounded bg-white col-md-6" >
-    <div class="row">
+
+<div class="container rounded bg-white col-md-6">
+    <div class="row" >
         <div class="col-md-5 border-right">
                 <div class="profile-img">
                     <img src="imags/download.png" alt=""/>
                     <div class="file btn btn-lg btn-primary">
-                        تعديل الصورة
+                                 تعديل الصورة
                         <input type="file" name="file"/>
                     </div>
             </div>
