--- a/views/setNewPass.hbs
+++ b/views/setNewPass.hbs
@@ -34,22 +34,22 @@
 
     <div class="login-form-container">
 
-        <!-- <i class="fas fa-times" id="form-close"></i> -->
+        <!-- 
+            <i class="fas fa-times" id="form-close"></i>
+             -->
     
-        <form action="/newPassword" method="POST">
+        <form action="/newPassword?_method=PUT" method="POST">
             <h3> تغيير كلمة المرور</h3>
             <input name="password" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة">
             <input name="conPassword" type="password" class="box" placeholder="تأكيد كلمة المرور">
             <input type="submit" value="تأكيد" class="btn">  
         </form>
-
-        {{#if message}}
+    </div>
+            {{#if message}}
             <p class = "alert alert-success"> {{message}} </p>
-        {{/if}}
+        {{/if}}  
         
         {{#if failMessage}}
-            <p class = "alert alert-danger"> {{ failMessage }}</p>
+            <p class = "alert alert-danger mt-4 fixed"> {{ failMessage }}</p>
         {{/if}}
-        
-    </div>
 </body>       
