--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,12 @@
 :root{
   --orange:#ffa500;
 }
+.form-control{
+  margin-left: 10vw !important;
+  }
+  .form-control.is-invalid, .was-validated .form-control:invalid {
+    background-position: left calc(0.375em + 0.1875rem) center !important;
+  }
 
 *{
   font-family: 'Nunito', sans-serif;
@@ -301,7 +307,6 @@ header .search-bar-container label:hover{
   font-size: 1.7rem;
   color:#333;
   margin:.6rem 0;
-  border:.1rem solid rgba(0,0,0,.3);
   text-transform: none;
 }
 header .navbar a{
