--- a/views/logIn.hbs
+++ b/views/logIn.hbs
@@ -10,30 +10,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link rel="stylesheet" href="/style.css">
-<script defer src="loqma.js"></script>
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
-<header>
-    <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
-     <div class="dropdown">
-     <div class="icons">
-    <i class="fas fa-search" id="search-btn"></i>
-    <i class="fas fa-user" id="login-btn"></i>
-     </div> 
-    </div>
-
-</header>
 <div class="login-form-container">
 
-    <i class="fas fa-times" id="form-close"></i>
+   <a href="/" style="text-decoration: none;" class="fas fa-times" id="form-close"></a>
 
     <form action="/auth2/signin" method = "POST">
         <h3>تسجيل الدخول</h3>
-        <input type="email" class="box" placeholder="ادخل الايميل">
-        <input type="password" class="box" placeholder="ادخل كلمة المرور">
+        <input name="email" type="email" class="box" placeholder="ادخل الايميل">
+        <input name="password" type="password" class="box" placeholder="ادخل كلمة المرور">
         <input type="submit" value="تسجيل الدخول الآن" class="btn">
         <br>
 
