restaurant  and charity home page

--- a/public/style.css
+++ b/public/style.css
@@ -547,7 +547,7 @@ header .navbar a:hover{
   color:#333;
 }
 
-.services .box-container .box p{
+.services .box-container .box p, .box label{
   font-size: 1.5rem;
   color:#666;
   padding:1rem 0;
