--- a/views/profilePage.hbs
+++ b/views/profilePage.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لقمة خير</title>
+    <title>لقمة عيش</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
+    <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
      <div class="dropdown">
      <div class="icons">
     <i class="fas fa-search" id="search-btn"></i>
