--- a/views/setNewPass.hbs
+++ b/views/setNewPass.hbs
@@ -18,26 +18,17 @@
 
 <body>
     <header>
-        <div id="menu-bar" class="fas fa-bars"></div>
-    
-    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
-
+        <div id="menu-bar" class="fas fa-bars"></div>    
+        <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
         <div class="icons">
             <i class="fas fa-search" id="search-btn"></i>
             <i class="fas fa-user" id="login-btn"></i>
         </div>
-    
     <div class='div1'>
-    
     </div>
     </header>
 
     <div class="login-form-container">
-
-        <!-- 
-            <i class="fas fa-times" id="form-close"></i>
-             -->
-    
         <form action="/newPassword?_method=PUT" method="POST">
             <h3> تغيير كلمة المرور</h3>
             <input name="password" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة">
