--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,6 +32,9 @@
             <br><br><br>
             <h7>الرجاء تسجيل الدخول للمتابعة</h7>
             <a href="/Login">تسحيل الدخول الآن</a>
+            <br>
+            <h7>للتواصل</h7>
+            <a href="/contactUs">اضغط هنا</a>
          </div>
          <div class="div2">
               <img src="luqma.png" class="d-block w-100" alt="...">
