--- a/views/resHomePage.hbs
+++ b/views/resHomePage.hbs
@@ -21,6 +21,7 @@
         <a style="text-decoration: none;" href="#services">العروضات</a>
         <a style="text-decoration: none;" href="#book">الحجوزات</a>
         <a style="text-decoration: none;" href="#contact">التواصل معنا</a>
+         <a href="/changePassword">تغيير كلمة المرور</a>
     </nav>
      <div class="dropdown">
      <div class="icons">
