--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -15,7 +15,7 @@
 
     <div class="login-form-container">
         <a href="/" style="text-decoration: none;" class="fas fa-times" id="form-close"></a>
-        <form action="/auth/register" method="POST" id="form" class="needs-validation-signup" novalidate>
+        <form action="/auth1/signUp" method="POST" id="form" class="needs-validation-signup" novalidate>
             <h3>مستخدم جديد</h3>
 
             <div class="form-group p-1 form-group">
