--- a/views/logIn.hbs
+++ b/views/logIn.hbs
@@ -18,7 +18,7 @@
 
    <a href="/" style="text-decoration: none;" class="fas fa-times" id="form-close"></a>
 
-    <form action="/auth2/signin" method = "POST" class="needs-validation-login" novalidate>
+    <form action="/auth2/signIn" method = "POST" class="needs-validation-login" novalidate>
         <h3>تسجيل الدخول</h3>
           <div class="form-group p-1 form-group">
         <input name="email" type="email" class="box" placeholder="ادخل الايميل" id = "email" required>
