--- a/views/charHomePage.hbs
+++ b/views/charHomePage.hbs
@@ -24,6 +24,7 @@
         <a href="#book">حجز</a>
         <a href="#contact">التواصل معنا</a>
         <a href="/changePassword">تغيير كلمة المرور</a>
+        <a href="/deleteAccount">حذف الحساب</a>
     </nav>
      <div class="dropdown">
      <div class="icons">
