--- a/views/resHomePage.hbs
+++ b/views/resHomePage.hbs
@@ -22,6 +22,7 @@
         <a style="text-decoration: none;" href="#book">الحجوزات</a>
         <a style="text-decoration: none;" href="#contact">التواصل معنا</a>
          <a href="/changePassword">تغيير كلمة المرور</a>
+         <a href="/deleteAccount">حذف الحساب</a>
     </nav>
      <div class="dropdown">
      <div class="icons">
