View restaurants from the data base
Co-Authored-By: abrarhannoon <92648528+abrarhannoon@users.noreply.github.com>
Co-Authored-By: Karam R. Hazza <77400199+william94411@users.noreply.github.com>

--- a/views/resHomePage.ejs
+++ b/views/resHomePage.ejs
@@ -107,7 +107,10 @@
             <button href="#services" class="btn"> حفظ التعديلات </button>
             </form>
             </div>
-        
+            <form action="/meues" method="POST" >
+
+                <button href="/" class="btn"> تعديل </button>
+            </form>
 
     </div>
 
