--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -32,7 +32,7 @@
     </div>
     </header>
     <div class="login-form-container">
-        <form  action="/auth3/changePassword" method="POST">
+        <form  action="/auth3/changePassword?_method=PUT" method="POST">
             <h3> تغيير كلمة المرور</h3>
             <input name="curentPassword" type="password" class="box" placeholder=" ادخل كلمة المرور الحالية">
             <input name="newPassword" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة">
